ejercicio_funcion_con_stmts/CombinationLangFuncParser.py
# Generated from CombinationLangFunc.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CombinationLangFuncParser ( Parser ):

    grammarFileName = "CombinationLangFunc.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'func'", "'return'", "'for'", "'if'", 
                     "'switch'", "'case'", "'default'", "'('", "')'", "'{'", 
                     "'}'", "':'", "','", "';'", "'='", "'*'", "'/'", "'+'", 
                     "'-'", "'>'", "'<'", "'=='", "'!='" ]

    symbolicNames = [ "<INVALID>", "FUNC", "RETURN", "FOR", "IF", "SWITCH", 
                      "CASE", "DEFAULT", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
                      "COLON", "COMMA", "SEMI", "ASSIGN", "MUL", "DIV", 
                      "PLUS", "MINUS", "GT", "LT", "EQ", "NEQ", "ID", "INT", 
                      "WS" ]

    RULE_programa = 0
    RULE_funcion = 1
    RULE_parametros = 2
    RULE_sentencia = 3
    RULE_asignacion = 4
    RULE_expr = 5
    RULE_forStmt = 6
    RULE_condicion = 7
    RULE_paso = 8
    RULE_switchStmt = 9
    RULE_case = 10
    RULE_default = 11
    RULE_ifStmt = 12

    ruleNames =  [ "programa", "funcion", "parametros", "sentencia", "asignacion", 
                   "expr", "forStmt", "condicion", "paso", "switchStmt", 
                   "case", "default", "ifStmt" ]

    EOF = Token.EOF
    FUNC=1
    RETURN=2
    FOR=3
    IF=4
    SWITCH=5
    CASE=6
    DEFAULT=7
    LPAREN=8
    RPAREN=9
    LBRACE=10
    RBRACE=11
    COLON=12
    COMMA=13
    SEMI=14
    ASSIGN=15
    MUL=16
    DIV=17
    PLUS=18
    MINUS=19
    GT=20
    LT=21
    EQ=22
    NEQ=23
    ID=24
    INT=25
    WS=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CombinationLangFuncParser.EOF, 0)

        def funcion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CombinationLangFuncParser.FuncionContext)
            else:
                return self.getTypedRuleContext(CombinationLangFuncParser.FuncionContext,i)


        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CombinationLangFuncParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(CombinationLangFuncParser.SentenciaContext,i)


        def getRuleIndex(self):
            return CombinationLangFuncParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = CombinationLangFuncParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 28
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1]:
                    self.state = 26
                    self.funcion()
                    pass
                elif token in [3, 4, 5, 24]:
                    self.state = 27
                    self.sentencia()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 30 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 16777274) != 0)):
                    break

            self.state = 32
            self.match(CombinationLangFuncParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(CombinationLangFuncParser.FUNC, 0)

        def ID(self):
            return self.getToken(CombinationLangFuncParser.ID, 0)

        def LPAREN(self):
            return self.getToken(CombinationLangFuncParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(CombinationLangFuncParser.RPAREN, 0)

        def LBRACE(self):
            return self.getToken(CombinationLangFuncParser.LBRACE, 0)

        def RETURN(self):
            return self.getToken(CombinationLangFuncParser.RETURN, 0)

        def expr(self):
            return self.getTypedRuleContext(CombinationLangFuncParser.ExprContext,0)


        def SEMI(self):
            return self.getToken(CombinationLangFuncParser.SEMI, 0)

        def RBRACE(self):
            return self.getToken(CombinationLangFuncParser.RBRACE, 0)

        def parametros(self):
            return self.getTypedRuleContext(CombinationLangFuncParser.ParametrosContext,0)


        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CombinationLangFuncParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(CombinationLangFuncParser.SentenciaContext,i)


        def getRuleIndex(self):
            return CombinationLangFuncParser.RULE_funcion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncion" ):
                listener.enterFuncion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncion" ):
                listener.exitFuncion(self)




    def funcion(self):

        localctx = CombinationLangFuncParser.FuncionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_funcion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.match(CombinationLangFuncParser.FUNC)
            self.state = 35
            self.match(CombinationLangFuncParser.ID)
            self.state = 36
            self.match(CombinationLangFuncParser.LPAREN)
            self.state = 38
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==24:
                self.state = 37
                self.parametros()


            self.state = 40
            self.match(CombinationLangFuncParser.RPAREN)
            self.state = 41
            self.match(CombinationLangFuncParser.LBRACE)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 16777272) != 0):
                self.state = 42
                self.sentencia()
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 48
            self.match(CombinationLangFuncParser.RETURN)
            self.state = 49
            self.expr(0)
            self.state = 50
            self.match(CombinationLangFuncParser.SEMI)
            self.state = 51
            self.match(CombinationLangFuncParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametrosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(CombinationLangFuncParser.ID)
            else:
                return self.getToken(CombinationLangFuncParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CombinationLangFuncParser.COMMA)
            else:
                return self.getToken(CombinationLangFuncParser.COMMA, i)

        def getRuleIndex(self):
            return CombinationLangFuncParser.RULE_parametros

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametros" ):
                listener.enterParametros(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametros" ):
                listener.exitParametros(self)




    def parametros(self):

        localctx = CombinationLangFuncParser.ParametrosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_parametros)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(CombinationLangFuncParser.ID)
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==13:
                self.state = 54
                self.match(CombinationLangFuncParser.COMMA)
                self.state = 55
                self.match(CombinationLangFuncParser.ID)
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asignacion(self):
            return self.getTypedRuleContext(CombinationLangFuncParser.AsignacionContext,0)


        def SEMI(self):
            return self.getToken(CombinationLangFuncParser.SEMI, 0)

        def forStmt(self):
            return self.getTypedRuleContext(CombinationLangFuncParser.ForStmtContext,0)


        def switchStmt(self):
            return self.getTypedRuleContext(CombinationLangFuncParser.SwitchStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(CombinationLangFuncParser.IfStmtContext,0)


        def getRuleIndex(self):
            return CombinationLangFuncParser.RULE_sentencia

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentencia" ):
                listener.enterSentencia(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentencia" ):
                listener.exitSentencia(self)




    def sentencia(self):

        localctx = CombinationLangFuncParser.SentenciaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_sentencia)
        try:
            self.state = 67
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [24]:
                self.enterOuterAlt(localctx, 1)
                self.state = 61
                self.asignacion()
                self.state = 62
                self.match(CombinationLangFuncParser.SEMI)
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                self.forStmt()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 65
                self.switchStmt()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 4)
                self.state = 66
                self.ifStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CombinationLangFuncParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(CombinationLangFuncParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(CombinationLangFuncParser.ExprContext,0)


        def getRuleIndex(self):
            return CombinationLangFuncParser.RULE_asignacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)




    def asignacion(self):

        localctx = CombinationLangFuncParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(CombinationLangFuncParser.ID)
            self.state = 70
            self.match(CombinationLangFuncParser.ASSIGN)
            self.state = 71
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CombinationLangFuncParser.ID, 0)

        def INT(self):
            return self.getToken(CombinationLangFuncParser.INT, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CombinationLangFuncParser.ExprContext)
            else:
                return self.getTypedRuleContext(CombinationLangFuncParser.ExprContext,i)


        def MUL(self):
            return self.getToken(CombinationLangFuncParser.MUL, 0)

        def DIV(self):
            return self.getToken(CombinationLangFuncParser.DIV, 0)

        def PLUS(self):
            return self.getToken(CombinationLangFuncParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(CombinationLangFuncParser.MINUS, 0)

        def getRuleIndex(self):
            return CombinationLangFuncParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CombinationLangFuncParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [24]:
                self.state = 74
                self.match(CombinationLangFuncParser.ID)
                pass
            elif token in [25]:
                self.state = 75
                self.match(CombinationLangFuncParser.INT)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 83
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = CombinationLangFuncParser.ExprContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                    self.state = 78
                    if not self.precpred(self._ctx, 3):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                    self.state = 79
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 983040) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 80
                    self.expr(4) 
                self.state = 85
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ForStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(CombinationLangFuncParser.FOR, 0)

        def LPAREN(self):
            return self.getToken(CombinationLangFuncParser.LPAREN, 0)

        def asignacion(self):
            return self.getTypedRuleContext(CombinationLangFuncParser.AsignacionContext,0)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(CombinationLangFuncParser.SEMI)
            else:
                return self.getToken(CombinationLangFuncParser.SEMI, i)

        def condicion(self):
            return self.getTypedRuleContext(CombinationLangFuncParser.CondicionContext,0)


        def paso(self):
            return self.getTypedRuleContext(CombinationLangFuncParser.PasoContext,0)


        def RPAREN(self):
            return self.getToken(CombinationLangFuncParser.RPAREN, 0)

        def LBRACE(self):
            return self.getToken(CombinationLangFuncParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(CombinationLangFuncParser.RBRACE, 0)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CombinationLangFuncParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(CombinationLangFuncParser.SentenciaContext,i)


        def getRuleIndex(self):
            return CombinationLangFuncParser.RULE_forStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStmt" ):
                listener.enterForStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStmt" ):
                listener.exitForStmt(self)




    def forStmt(self):

        localctx = CombinationLangFuncParser.ForStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_forStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(CombinationLangFuncParser.FOR)
            self.state = 87
            self.match(CombinationLangFuncParser.LPAREN)
            self.state = 88
            self.asignacion()
            self.state = 89
            self.match(CombinationLangFuncParser.SEMI)
            self.state = 90
            self.condicion()
            self.state = 91
            self.match(CombinationLangFuncParser.SEMI)
            self.state = 92
            self.paso()
            self.state = 93
            self.match(CombinationLangFuncParser.RPAREN)
            self.state = 94
            self.match(CombinationLangFuncParser.LBRACE)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 16777272) != 0):
                self.state = 95
                self.sentencia()
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 101
            self.match(CombinationLangFuncParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CombinationLangFuncParser.ExprContext)
            else:
                return self.getTypedRuleContext(CombinationLangFuncParser.ExprContext,i)


        def GT(self):
            return self.getToken(CombinationLangFuncParser.GT, 0)

        def LT(self):
            return self.getToken(CombinationLangFuncParser.LT, 0)

        def EQ(self):
            return self.getToken(CombinationLangFuncParser.EQ, 0)

        def NEQ(self):
            return self.getToken(CombinationLangFuncParser.NEQ, 0)

        def getRuleIndex(self):
            return CombinationLangFuncParser.RULE_condicion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicion" ):
                listener.enterCondicion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicion" ):
                listener.exitCondicion(self)




    def condicion(self):

        localctx = CombinationLangFuncParser.CondicionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_condicion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.expr(0)
            self.state = 104
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 15728640) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 105
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PasoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asignacion(self):
            return self.getTypedRuleContext(CombinationLangFuncParser.AsignacionContext,0)


        def getRuleIndex(self):
            return CombinationLangFuncParser.RULE_paso

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPaso" ):
                listener.enterPaso(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPaso" ):
                listener.exitPaso(self)




    def paso(self):

        localctx = CombinationLangFuncParser.PasoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_paso)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.asignacion()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SwitchStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SWITCH(self):
            return self.getToken(CombinationLangFuncParser.SWITCH, 0)

        def LPAREN(self):
            return self.getToken(CombinationLangFuncParser.LPAREN, 0)

        def ID(self):
            return self.getToken(CombinationLangFuncParser.ID, 0)

        def RPAREN(self):
            return self.getToken(CombinationLangFuncParser.RPAREN, 0)

        def LBRACE(self):
            return self.getToken(CombinationLangFuncParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(CombinationLangFuncParser.RBRACE, 0)

        def case(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CombinationLangFuncParser.CaseContext)
            else:
                return self.getTypedRuleContext(CombinationLangFuncParser.CaseContext,i)


        def default(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CombinationLangFuncParser.DefaultContext)
            else:
                return self.getTypedRuleContext(CombinationLangFuncParser.DefaultContext,i)


        def getRuleIndex(self):
            return CombinationLangFuncParser.RULE_switchStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSwitchStmt" ):
                listener.enterSwitchStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSwitchStmt" ):
                listener.exitSwitchStmt(self)




    def switchStmt(self):

        localctx = CombinationLangFuncParser.SwitchStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_switchStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(CombinationLangFuncParser.SWITCH)
            self.state = 110
            self.match(CombinationLangFuncParser.LPAREN)
            self.state = 111
            self.match(CombinationLangFuncParser.ID)
            self.state = 112
            self.match(CombinationLangFuncParser.RPAREN)
            self.state = 113
            self.match(CombinationLangFuncParser.LBRACE)
            self.state = 116 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 116
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [6]:
                    self.state = 114
                    self.case()
                    pass
                elif token in [7]:
                    self.state = 115
                    self.default()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 118 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==6 or _la==7):
                    break

            self.state = 120
            self.match(CombinationLangFuncParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CaseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CASE(self):
            return self.getToken(CombinationLangFuncParser.CASE, 0)

        def INT(self):
            return self.getToken(CombinationLangFuncParser.INT, 0)

        def COLON(self):
            return self.getToken(CombinationLangFuncParser.COLON, 0)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CombinationLangFuncParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(CombinationLangFuncParser.SentenciaContext,i)


        def getRuleIndex(self):
            return CombinationLangFuncParser.RULE_case

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCase" ):
                listener.enterCase(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCase" ):
                listener.exitCase(self)




    def case(self):

        localctx = CombinationLangFuncParser.CaseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_case)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(CombinationLangFuncParser.CASE)
            self.state = 123
            self.match(CombinationLangFuncParser.INT)
            self.state = 124
            self.match(CombinationLangFuncParser.COLON)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 16777272) != 0):
                self.state = 125
                self.sentencia()
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefaultContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEFAULT(self):
            return self.getToken(CombinationLangFuncParser.DEFAULT, 0)

        def COLON(self):
            return self.getToken(CombinationLangFuncParser.COLON, 0)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CombinationLangFuncParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(CombinationLangFuncParser.SentenciaContext,i)


        def getRuleIndex(self):
            return CombinationLangFuncParser.RULE_default

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefault" ):
                listener.enterDefault(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefault" ):
                listener.exitDefault(self)




    def default(self):

        localctx = CombinationLangFuncParser.DefaultContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_default)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(CombinationLangFuncParser.DEFAULT)
            self.state = 132
            self.match(CombinationLangFuncParser.COLON)
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 16777272) != 0):
                self.state = 133
                self.sentencia()
                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(CombinationLangFuncParser.IF, 0)

        def LPAREN(self):
            return self.getToken(CombinationLangFuncParser.LPAREN, 0)

        def condicion(self):
            return self.getTypedRuleContext(CombinationLangFuncParser.CondicionContext,0)


        def RPAREN(self):
            return self.getToken(CombinationLangFuncParser.RPAREN, 0)

        def LBRACE(self):
            return self.getToken(CombinationLangFuncParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(CombinationLangFuncParser.RBRACE, 0)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CombinationLangFuncParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(CombinationLangFuncParser.SentenciaContext,i)


        def getRuleIndex(self):
            return CombinationLangFuncParser.RULE_ifStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStmt" ):
                listener.enterIfStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStmt" ):
                listener.exitIfStmt(self)




    def ifStmt(self):

        localctx = CombinationLangFuncParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_ifStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(CombinationLangFuncParser.IF)
            self.state = 140
            self.match(CombinationLangFuncParser.LPAREN)
            self.state = 141
            self.condicion()
            self.state = 142
            self.match(CombinationLangFuncParser.RPAREN)
            self.state = 143
            self.match(CombinationLangFuncParser.LBRACE)
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 16777272) != 0):
                self.state = 144
                self.sentencia()
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 150
            self.match(CombinationLangFuncParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[5] = self.expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expr_sempred(self, localctx:ExprContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 3)
         




